# qdjango-qml

src/: src.pri
src/db/: CMakeLists.txt  QDjango.cpp  QDjango.h  QDjangoMetaModel.cpp  QDjangoMetaModel.h  QDjangoModel.cpp  QDjangoModel.h  QDjangoQuerySet.cpp  QDjangoQuerySet.h  QDjangoQuerySet_p.h  QDjangoWhere.cpp  QDjango_p.h  db.pro  qdjango-db.prf
src/http/: http.pro  qdjango-db.prf
